[tool.poetry]
name = "rocking-chair"
version = "0.1.0"
description = ""
authors = ["Michael Nelson <revnelson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
